read env from secrets

--- a/.github/workflows/update_step_component.yml
+++ b/.github/workflows/update_step_component.yml
@@ -15,5 +15,7 @@ jobs:
 
     - name: Run the script for fetching my latest steps
       shell: pwsh
+      env:
+          STEPS_URI: ${{ secrets.STEPS_URI }}
       run: |
         . ./.github/scripts/Get-Steps.ps1
