add new community action

--- a/.github/workflows/update_blog_posts.yml
+++ b/.github/workflows/update_blog_posts.yml
@@ -17,3 +17,8 @@ jobs:
       shell: pwsh
       run: |
         . ./.github/scripts/Get-Posts.ps1
+        
+    - name: Commit and Push the changes
+      uses: mikeal/publish-to-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
