--- a/.github/workflows/update_step_component.yml
+++ b/.github/workflows/update_step_component.yml
@@ -2,7 +2,7 @@ name: Update Step Component
 
 on:
   schedule:
-    - cron: '0 8,20 * * *'
+    - cron: '0 21 * * *'
   workflow_dispatch:
 
 jobs:
@@ -24,3 +24,4 @@ jobs:
       uses: mikeal/publish-to-github-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH_NAME: 'main'
